tests/ui/type-alias-impl-trait/assoc-type-lifetime-unconstrained.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/assoc-type-lifetime-unconstrained.rs:17:6
   |
LL | impl<'a, I> UnwrapItemsExt for I {
   |      ^^ unconstrained lifetime parameter
   |
help: Either remove the type parameter ''a' or make use of it, for example ` for S<'a>`.
   |
LL - impl<'a, I> UnwrapItemsExt for I {
LL + impl<, I> UnwrapItemsExt for I {
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
